--- a/IRT/Views/Home/getDocuments.cshtml
+++ b/IRT/Views/Home/getDocuments.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<IRT.Models.Document>
 
 @{
-    ViewData["Title"] = "getResult";
+    ViewData["Title"] = "getDocuments";
 }
 
-<h1 class="text-center"> R E S U L T </h1>
+<h1 class="text-center"> R E S U L T : get Documents </h1>
 
 <div class="row">
 
