--- a/IRT/Views/Home/Index.cshtml
+++ b/IRT/Views/Home/Index.cshtml
@@ -4,6 +4,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <form asp-action="getTerms">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon3">DocumentCollection</span>
+            <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3"
+                   name="path" value="E:\FCAI-H\Level_4\Term_1\IR\Project\DocumentCollection">
+            <input type="submit" value="getTerms" class="btn btn-outline-primary" />
+        </div>
+    </form>
     <form asp-action="getDocuments">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="input-group mb-3">
@@ -13,13 +22,13 @@
             <input type="submit" value="getDocuments" class="btn btn-outline-primary" />
         </div>
     </form>
-    <form asp-action="getTerms">
+    <form asp-action="getTermDocumentIncidenceMatrices">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon3">DocumentCollection</span>
             <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3"
-                    name="path" value="E:\FCAI-H\Level_4\Term_1\IR\Project\DocumentCollection">
-            <input type="submit" value="getTerms" class="btn btn-outline-primary" />
+                   name="path" value="E:\FCAI-H\Level_4\Term_1\IR\Project\DocumentCollection">
+            <input type="submit" value="getTermDocumentIncidenceMatrices" class="btn btn-outline-primary" />
         </div>
     </form>
 
