--- a/IRT/Views/Home/getTerms.cshtml
+++ b/IRT/Views/Home/getTerms.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<IRT.Models.Term>
 
 @{
-    ViewData["Title"] = "getResult";
+    ViewData["Title"] = "getTerms";
 }
 
-<h1> R E S U L T </h1>
+<h1 class="text-center"> R E S U L T  : get Terms </h1>
 
 <div class="row">
 
@@ -16,7 +16,8 @@
                     <th scope="col"> # </th>
                     <th scope="col"> Term </th>
                     <th scope="col"> Terms Posting List </th>
-                    <th scope="col"> TF </th>
+                    <th scope="col"> DF </th>
+                    <th scope="col"> IDF </th>
                 </tr>
             </thead>
             <tbody>
@@ -34,6 +35,7 @@
                         }
                         <td>@PostingList</td>
                         <td>@term.termFrequency</td>
+                        <td> ... </td>
                     </tr>
                     i++;
                 }
