--- a/IRT/Views/Home/getDocuments.cshtml
+++ b/IRT/Views/Home/getDocuments.cshtml
@@ -17,6 +17,7 @@
                     <th scope="col"> Document Name </th>
                     <th scope="col"> Document Terms </th>
                     <th scope="col"> #Terms </th>
+                    <th scope="col"> Document Length</th>
                 </tr>
             </thead>
             <tbody>
@@ -33,6 +34,7 @@
                             }
                             <td>@terms</td>
                             <td>@doc.documentTerms.Count()</td>
+                            <td> ... </td>
                         }
                     </tr>
                 }
